Strona ze zdjęciami działa

--- a/mapa.html
+++ b/mapa.html
@@ -26,18 +26,18 @@
     </header>
     <nav id="navbar">
         <ul>
-            <li><a href="index.html" id="active">atlas</a></li>
+            <li><a href="index.html">atlas</a></li>
             <li><a href="zdjecia.html">zdjęcia</a></li>
             <li><a href="przepisy.html">przepisy</a></li>
             <li><a href="posty.html">posty</a></li>
-            <li><a href="mapa.html">mapa</a></li>
+            <li><a href="mapa.html" id="active">mapa</a></li>
             <li><a href="kontakt.html">kontakt</a></li>
             <li><a href="wybitny-czlowiek.html">o autorze</a></li>
         </ul>
     </nav>
     <div id="container">
-    <section>
-    </section>
+        <section>
+        </section>
     </div>
     <footer>
         Stronę wykonał <em>Konrad Szyszlak 131524</em> w ramach projektu
