--- a/mapa.html
+++ b/mapa.html
@@ -22,6 +22,17 @@
 <body>
     <header>
         <div id="logo"><img src="photos/logo.png" alt="logo strony"></div>
+        <div id="hamburger-menu">
+            <ul>
+                <li><a href="index.html">atlas</a></li>
+                <li><a href="zdjecia.html">zdjęcia</a></li>
+                <li><a href="przepisy.html">przepisy</a></li>
+                <li><a href="posty.html">posty</a></li>
+                <li><a href="mapa.html" id="active">mapa</a></li>
+                <li><a href="kontakt.html">kontakt</a></li>
+                <li><a href="wybitny-czlowiek.html">o autorze</a></li>
+            </ul>
+        </div>
         <div id="logo-napis" class="dynapuff-font"><a href="index.html">LEŚNY KOSZYCZEK</a></div>
     </header>
     <nav id="navbar">
