--- a/zdjecia.html
+++ b/zdjecia.html
@@ -22,6 +22,17 @@
 <body>
     <header>
         <div id="logo"><img src="photos/logo.png" alt="logo strony"></div>
+        <div id="hamburger-menu">
+            <ul>
+                <li><a href="index.html">atlas</a></li>
+                <li><a href="zdjecia.html" id="active">zdjęcia</a></li>
+                <li><a href="przepisy.html">przepisy</a></li>
+                <li><a href="posty.html">posty</a></li>
+                <li><a href="mapa.html">mapa</a></li>
+                <li><a href="kontakt.html">kontakt</a></li>
+                <li><a href="wybitny-czlowiek.html">o autorze</a></li>
+            </ul>
+        </div>
         <div id="logo-napis" class="dynapuff-font"><a href="index.html">LEŚNY KOSZYCZEK</a></div>
     </header>
     <nav id="navbar">
@@ -37,8 +48,10 @@
     </nav>
     <div id="container">
         <section>
+            <h1>Oto zdjęcia naszych użythowników</h1>
             
             <div id="gallery">
+            <!-- zdjęcia będą się powtarzać ponieważ nie ma sensu żebym pobierał więcej niż jest teraz bo nie one są najważniejsze w tym projekcie -->
             <img src="photos/boletus-3722395_1280.jpg" alt="Boletus"> 
             <img src="photos/fungus-1194380_1280.jpg" alt="Fungus"> 
             <img src="photos/gabriela-xjy0zjs1BHw-unsplash.jpg" alt="Gabriela's photo"> 
