poprawa responsywności na mniejszych ekranach + teraz przechodzi validacje

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div id="hamburger-menu">
             <div id="burger-icon"></div>
             <ul>
-                <li><a href="index.html" id="active">atlas</a></li>
+                <li><a href="index.html" class="active">atlas</a></li>
                 <li><a href="zdjecia.html">zdjęcia</a></li>
                 <li><a href="przepisy.html">przepisy</a></li>
                 <li><a href="posty.html">posty</a></li>
@@ -38,7 +38,7 @@
     </header>
     <nav id="navbar">
         <ul>
-            <li><a href="index.html" id="active">atlas</a></li>
+            <li><a href="index.html" class="active">atlas</a></li>
             <li><a href="zdjecia.html">zdjęcia</a></li>
             <li><a href="przepisy.html">przepisy</a></li>
             <li><a href="posty.html">posty</a></li>
