--- a/kontakt.html
+++ b/kontakt.html
@@ -29,7 +29,7 @@
                 <li><a href="przepisy.html">przepisy</a></li>
                 <li><a href="posty.html">posty</a></li>
                 <li><a href="mapa.html">mapa</a></li>
-                <li><a href="kontakt.html" id="active">kontakt</a></li>
+                <li><a href="kontakt.html" class="active">kontakt</a></li>
                 <li><a href="wybitny-czlowiek.html">o autorze</a></li>
             </ul>
         </div>
@@ -42,7 +42,7 @@
             <li><a href="przepisy.html">przepisy</a></li>
             <li><a href="posty.html">posty</a></li>
             <li><a href="mapa.html">mapa</a></li>
-            <li><a href="kontakt.html" id="active">kontakt</a></li>
+            <li><a href="kontakt.html" class="active">kontakt</a></li>
             <li><a href="wybitny-czlowiek.html">o autorze</a></li>
         </ul>
     </nav>
