--- a/posty.html
+++ b/posty.html
@@ -27,7 +27,7 @@
                 <li><a href="index.html">atlas</a></li>
                 <li><a href="zdjecia.html">zdjęcia</a></li>
                 <li><a href="przepisy.html">przepisy</a></li>
-                <li><a href="posty.html" id="active">posty</a></li>
+                <li><a href="posty.html" class="active">posty</a></li>
                 <li><a href="mapa.html">mapa</a></li>
                 <li><a href="kontakt.html">kontakt</a></li>
                 <li><a href="wybitny-czlowiek.html">o autorze</a></li>
@@ -40,7 +40,7 @@
             <li><a href="index.html">atlas</a></li>
             <li><a href="zdjecia.html">zdjęcia</a></li>
             <li><a href="przepisy.html">przepisy</a></li>
-            <li><a href="posty.html" id="active">posty</a></li>
+            <li><a href="posty.html" class="active">posty</a></li>
             <li><a href="mapa.html">mapa</a></li>
             <li><a href="kontakt.html">kontakt</a></li>
             <li><a href="wybitny-czlowiek.html">o autorze</a></li>
