--- a/wybitny-czlowiek.html
+++ b/wybitny-czlowiek.html
@@ -30,7 +30,7 @@
                 <li><a href="posty.html">posty</a></li>
                 <li><a href="mapa.html">mapa</a></li>
                 <li><a href="kontakt.html">kontakt</a></li>
-                <li><a href="wybitny-czlowiek.html" id="active">o autorze</a></li>
+                <li><a href="wybitny-czlowiek.html" class="active">o autorze</a></li>
             </ul>
         </div>
         <div id="logo-napis" class="dynapuff-font"><a href="index.html">LEŚNY KOSZYCZEK</a></div>
@@ -43,7 +43,7 @@
             <li><a href="posty.html">posty</a></li>
             <li><a href="mapa.html">mapa</a></li>
             <li><a href="kontakt.html">kontakt</a></li>
-            <li><a href="wybitny-czlowiek.html" id="active">o autorze</a></li>
+            <li><a href="wybitny-czlowiek.html" class="active">o autorze</a></li>
         </ul>
     </nav>
     <div id="container">
