--- a/zdjecia.html
+++ b/zdjecia.html
@@ -25,7 +25,7 @@
         <div id="hamburger-menu">
             <ul>
                 <li><a href="index.html">atlas</a></li>
-                <li><a href="zdjecia.html" id="active">zdjęcia</a></li>
+                <li><a href="zdjecia.html" class="active">zdjęcia</a></li>
                 <li><a href="przepisy.html">przepisy</a></li>
                 <li><a href="posty.html">posty</a></li>
                 <li><a href="mapa.html">mapa</a></li>
@@ -38,7 +38,7 @@
     <nav id="navbar">
         <ul>
             <li><a href="index.html">atlas</a></li>
-            <li><a href="zdjecia.html" id="active">zdjęcia</a></li>
+            <li><a href="zdjecia.html" class="active">zdjęcia</a></li>
             <li><a href="przepisy.html">przepisy</a></li>
             <li><a href="posty.html">posty</a></li>
             <li><a href="mapa.html">mapa</a></li>
