--- a/mapa.html
+++ b/mapa.html
@@ -28,7 +28,7 @@
                 <li><a href="zdjecia.html">zdjęcia</a></li>
                 <li><a href="przepisy.html">przepisy</a></li>
                 <li><a href="posty.html">posty</a></li>
-                <li><a href="mapa.html" id="active">mapa</a></li>
+                <li><a href="mapa.html" class="active">mapa</a></li>
                 <li><a href="kontakt.html">kontakt</a></li>
                 <li><a href="wybitny-czlowiek.html">o autorze</a></li>
             </ul>
@@ -41,7 +41,7 @@
             <li><a href="zdjecia.html">zdjęcia</a></li>
             <li><a href="przepisy.html">przepisy</a></li>
             <li><a href="posty.html">posty</a></li>
-            <li><a href="mapa.html" id="active">mapa</a></li>
+            <li><a href="mapa.html" class="active">mapa</a></li>
             <li><a href="kontakt.html">kontakt</a></li>
             <li><a href="wybitny-czlowiek.html">o autorze</a></li>
         </ul>
