--- a/przepisy.html
+++ b/przepisy.html
@@ -26,7 +26,7 @@
             <ul>
                 <li><a href="index.html">atlas</a></li>
                 <li><a href="zdjecia.html">zdjęcia</a></li>
-                <li><a href="przepisy.html" id="active">przepisy</a></li>
+                <li><a href="przepisy.html" class="active">przepisy</a></li>
                 <li><a href="posty.html">posty</a></li>
                 <li><a href="mapa.html">mapa</a></li>
                 <li><a href="kontakt.html">kontakt</a></li>
@@ -39,7 +39,7 @@
         <ul>
             <li><a href="index.html">atlas</a></li>
             <li><a href="zdjecia.html">zdjęcia</a></li>
-            <li><a href="przepisy.html" id="active">przepisy</a></li>
+            <li><a href="przepisy.html" class="active">przepisy</a></li>
             <li><a href="posty.html">posty</a></li>
             <li><a href="mapa.html">mapa</a></li>
             <li><a href="kontakt.html">kontakt</a></li>
