sekcja o autorze skończona, dodatkowo poprawiłem błędy które znalazłem wcześniej

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
     <header>
         <div id="logo"><img src="photos/logo.png" alt="logo strony"></div>
-        <div id="hamburger-menu">
+        <nav id="hamburger-menu">
             <div id="burger-icon"></div>
             <ul>
                 <li><a href="index.html" class="active">atlas</a></li>
@@ -33,7 +33,7 @@
                 <li><a href="kontakt.html">kontakt</a></li>
                 <li><a href="wybitny-czlowiek.html">o autorze</a></li>
             </ul>
-        </div>
+        </nav>
         <div id="logo-napis" class="dynapuff-font"><a href="index.html">LEŚNY KOSZYCZEK</a></div>
     </header>
     <nav id="navbar">
