--- a/wybitny-czlowiek.html
+++ b/wybitny-czlowiek.html
@@ -48,6 +48,23 @@
     </nav>
     <div id="container">
         <section>
+            <h1>Konrad Szyszlak - wybitny człowiek</h1>
+            <img src="photos/wybitny_czlowiek.jpg" alt="Konrad Szyszlak">
+            <article>
+                Autor, którego masz przed sobą, to postać wyjątkowa – człowiek o intelekcie, który zdaje się wyprzedzać swoją epokę, i urodzie, która dorównuje młodemu Krzysztofowi Krawczykowi. Gdyby Tony Stark miał polskie korzenie, miłość do śpiewania przy ognisku i talent do pieczenia najlepszych pierogów w okolicy, to właśnie on byłby tym człowiekiem.
+
+    Urodzony z pasją do innowacji, od najmłodszych lat przejawiał niezwykły talent do łączenia rzeczy pozornie niepasujących. W podstawówce zbudował swój pierwszy komputer z klocków LEGO i starej drukarki igłowej. W liceum opracował system optymalizacji domowego ogrzewania, dzięki czemu sąsiedzi przez całą zimę chodzili w T-shirtach. Ale to nie wszystko – równolegle rozwijał swoje zdolności artystyczne, zdobywając lokalne nagrody za interpretacje klasyków polskiej piosenki, od Maryli Rodowicz po Zbigniewa Wodeckiego.
+
+    Jego wielką pasją jest muzyka. Ma głos, który potrafi wzruszyć nawet najbardziej zatwardziałe serca. Gdy śpiewa, ludzie zatrzymują się na ulicy, by posłuchać – w końcu nie codziennie można usłyszeć kogoś, kto łączy energię Bruce’a Springsteena z romantyzmem Andrzeja Zauchy. Jego ulubioną piosenką jest Parostatek, a gdy tylko znajdzie chwilę wolnego czasu, komponuje własne utwory, które łączą tradycyjne polskie brzmienia z nowoczesnym elektronicznym twistem.
+
+    To również człowiek, który nie boi się wyzwań. Oprócz talentu technicznego i muzycznego ma niezwykłą zdolność do zjednywania sobie ludzi. Organizuje spotkania dla lokalnej społeczności, podczas których uczy podstaw programowania, pieczenia chleba na zakwasie i… rzeźbienia w drewnie. Podobno jeden z jego uczestników stworzył dzięki temu własną firmę rzemieślniczą, co tylko potwierdza, że autor ma dar inspirowania innych.
+
+    Podczas jednej ze swoich podróży do Ameryki Południowej dokonał czegoś wyjątkowego – nauczył plemię Indian obsługiwać telefony komórkowe. Dzięki jego cierpliwości i wiedzy technologicznej udało się wprowadzić do ich życia nowoczesne środki komunikacji, co znacznie ułatwiło im kontakt z zewnętrznym światem. Dziś plemię to nie tylko korzysta z telefonów, ale także tworzy własne aplikacje, co przekształciło ich życie i otworzyło nowe możliwości edukacyjne oraz ekonomiczne.
+
+    Uwielbia podróże i dobre jedzenie. Jest znany z tego, że potrafi znaleźć najlepsze pierogi w każdej części Polski – i zawsze zamawia dodatkową porcję, „na wszelki wypadek”. Jego lista marzeń obejmuje m.in. lot balonem nad Tatrami, stworzenie filmu dokumentalnego o wpływie muzyki na rozwój technologii oraz napisanie powieści, która zainspiruje kolejne pokolenia do odważnego patrzenia w przyszłość.
+
+    W skrócie: człowiek, który łączy geniusz, styl, empatię i artystyczną duszę. Gdyby życie było grą, on miałby wszystkie statystyki na maksimum – a nawet kilka punktów ponad to.
+            </article>
         </section>
     </div>
     <footer>
