--- a/zdjecia.html
+++ b/zdjecia.html
@@ -48,94 +48,110 @@
     </nav>
     <div id="container">
         <section>
-            <h1>Oto zdjęcia naszych użythowników</h1>
+            <h1>Oto zdjęcia naszych użytkowników</h1>
             
             <div id="gallery">
             <!-- zdjęcia będą się powtarzać ponieważ nie ma sensu żebym pobierał więcej niż jest teraz bo nie one są najważniejsze w tym projekcie -->
-            <img src="photos/boletus-3722395_1280.jpg" alt="Boletus"> 
-            <img src="photos/fungus-1194380_1280.jpg" alt="Fungus"> 
-            <img src="photos/gabriela-xjy0zjs1BHw-unsplash.jpg" alt="Gabriela's photo"> 
-            <img src="photos/krzysztof-niewolny-cX0nEoAS2SI-unsplash.jpg" alt="Krzysztof's photo 1"> 
-            <img src="photos/krzysztof-niewolny-l9W-HZaD88A-unsplash.jpg" alt="Krzysztof's photo 2"> 
-            <img src="photos/krzysztof-niewolny-lpD4zdWlisE-unsplash.jpg" alt="Krzysztof's photo 3"> 
-            <img src="photos/krzysztof-niewolny-_sLrncJsoRc-unsplash.jpg" alt="Krzysztof's photo 4"> 
-            <img src="photos/krzysztof-niewolny-zhbFjC6a2yg-unsplash.jpg" alt="Krzysztof's photo 5"> 
-            <img src="photos/maksym-harbar-RW5bCKy8B84-unsplash.jpg" alt="Maksym's photo"> 
-            <img src="photos/mushroom-5714463_1280.jpg" alt="Mushroom 1"> 
-            <img src="photos/mushrooms-6621454_1280.jpg" alt="Mushrooms 2"> 
-            <img src="photos/tree-stump-1040639_1280.jpg" alt="Tree stump">
-            <img src="photos/boletus-3722395_1280.jpg" alt="Boletus"> 
-            <img src="photos/fungus-1194380_1280.jpg" alt="Fungus"> 
-            <img src="photos/gabriela-xjy0zjs1BHw-unsplash.jpg" alt="Gabriela's photo"> 
-            <img src="photos/krzysztof-niewolny-cX0nEoAS2SI-unsplash.jpg" alt="Krzysztof's photo 1"> 
-            <img src="photos/krzysztof-niewolny-l9W-HZaD88A-unsplash.jpg" alt="Krzysztof's photo 2"> 
-            <img src="photos/krzysztof-niewolny-lpD4zdWlisE-unsplash.jpg" alt="Krzysztof's photo 3"> 
-            <img src="photos/krzysztof-niewolny-_sLrncJsoRc-unsplash.jpg" alt="Krzysztof's photo 4"> 
-            <img src="photos/krzysztof-niewolny-zhbFjC6a2yg-unsplash.jpg" alt="Krzysztof's photo 5"> 
-            <img src="photos/maksym-harbar-RW5bCKy8B84-unsplash.jpg" alt="Maksym's photo"> 
-            <img src="photos/mushroom-5714463_1280.jpg" alt="Mushroom 1"> 
-            <img src="photos/mushrooms-6621454_1280.jpg" alt="Mushrooms 2"> 
-            <img src="photos/tree-stump-1040639_1280.jpg" alt="Tree stump">
-            <img src="photos/boletus-3722395_1280.jpg" alt="Boletus"> 
-            <img src="photos/fungus-1194380_1280.jpg" alt="Fungus"> 
-            <img src="photos/gabriela-xjy0zjs1BHw-unsplash.jpg" alt="Gabriela's photo"> 
-            <img src="photos/krzysztof-niewolny-cX0nEoAS2SI-unsplash.jpg" alt="Krzysztof's photo 1"> 
-            <img src="photos/krzysztof-niewolny-l9W-HZaD88A-unsplash.jpg" alt="Krzysztof's photo 2"> 
-            <img src="photos/krzysztof-niewolny-lpD4zdWlisE-unsplash.jpg" alt="Krzysztof's photo 3"> 
-            <img src="photos/krzysztof-niewolny-_sLrncJsoRc-unsplash.jpg" alt="Krzysztof's photo 4"> 
-            <img src="photos/krzysztof-niewolny-zhbFjC6a2yg-unsplash.jpg" alt="Krzysztof's photo 5"> 
-            <img src="photos/maksym-harbar-RW5bCKy8B84-unsplash.jpg" alt="Maksym's photo"> 
-            <img src="photos/mushroom-5714463_1280.jpg" alt="Mushroom 1"> 
-            <img src="photos/mushrooms-6621454_1280.jpg" alt="Mushrooms 2"> 
-            <img src="photos/tree-stump-1040639_1280.jpg" alt="Tree stump">
-            <img src="photos/boletus-3722395_1280.jpg" alt="Boletus"> 
-            <img src="photos/fungus-1194380_1280.jpg" alt="Fungus"> 
-            <img src="photos/gabriela-xjy0zjs1BHw-unsplash.jpg" alt="Gabriela's photo"> 
-            <img src="photos/krzysztof-niewolny-cX0nEoAS2SI-unsplash.jpg" alt="Krzysztof's photo 1"> 
-            <img src="photos/krzysztof-niewolny-l9W-HZaD88A-unsplash.jpg" alt="Krzysztof's photo 2"> 
-            <img src="photos/krzysztof-niewolny-lpD4zdWlisE-unsplash.jpg" alt="Krzysztof's photo 3"> 
-            <img src="photos/krzysztof-niewolny-_sLrncJsoRc-unsplash.jpg" alt="Krzysztof's photo 4"> 
-            <img src="photos/krzysztof-niewolny-zhbFjC6a2yg-unsplash.jpg" alt="Krzysztof's photo 5"> 
-            <img src="photos/maksym-harbar-RW5bCKy8B84-unsplash.jpg" alt="Maksym's photo"> 
-            <img src="photos/mushroom-5714463_1280.jpg" alt="Mushroom 1"> 
-            <img src="photos/mushrooms-6621454_1280.jpg" alt="Mushrooms 2"> 
-            <img src="photos/tree-stump-1040639_1280.jpg" alt="Tree stump">
-            <img src="photos/boletus-3722395_1280.jpg" alt="Boletus"> 
-            <img src="photos/fungus-1194380_1280.jpg" alt="Fungus"> 
-            <img src="photos/gabriela-xjy0zjs1BHw-unsplash.jpg" alt="Gabriela's photo"> 
-            <img src="photos/krzysztof-niewolny-cX0nEoAS2SI-unsplash.jpg" alt="Krzysztof's photo 1"> 
-            <img src="photos/krzysztof-niewolny-l9W-HZaD88A-unsplash.jpg" alt="Krzysztof's photo 2"> 
-            <img src="photos/krzysztof-niewolny-lpD4zdWlisE-unsplash.jpg" alt="Krzysztof's photo 3"> 
-            <img src="photos/krzysztof-niewolny-_sLrncJsoRc-unsplash.jpg" alt="Krzysztof's photo 4"> 
-            <img src="photos/krzysztof-niewolny-zhbFjC6a2yg-unsplash.jpg" alt="Krzysztof's photo 5"> 
-            <img src="photos/maksym-harbar-RW5bCKy8B84-unsplash.jpg" alt="Maksym's photo"> 
-            <img src="photos/mushroom-5714463_1280.jpg" alt="Mushroom 1"> 
-            <img src="photos/mushrooms-6621454_1280.jpg" alt="Mushrooms 2"> 
-            <img src="photos/tree-stump-1040639_1280.jpg" alt="Tree stump">
-            <img src="photos/boletus-3722395_1280.jpg" alt="Boletus"> 
-            <img src="photos/fungus-1194380_1280.jpg" alt="Fungus"> 
-            <img src="photos/gabriela-xjy0zjs1BHw-unsplash.jpg" alt="Gabriela's photo"> 
-            <img src="photos/krzysztof-niewolny-cX0nEoAS2SI-unsplash.jpg" alt="Krzysztof's photo 1"> 
-            <img src="photos/krzysztof-niewolny-l9W-HZaD88A-unsplash.jpg" alt="Krzysztof's photo 2"> 
-            <img src="photos/krzysztof-niewolny-lpD4zdWlisE-unsplash.jpg" alt="Krzysztof's photo 3"> 
-            <img src="photos/krzysztof-niewolny-_sLrncJsoRc-unsplash.jpg" alt="Krzysztof's photo 4"> 
-            <img src="photos/krzysztof-niewolny-zhbFjC6a2yg-unsplash.jpg" alt="Krzysztof's photo 5"> 
-            <img src="photos/maksym-harbar-RW5bCKy8B84-unsplash.jpg" alt="Maksym's photo"> 
-            <img src="photos/mushroom-5714463_1280.jpg" alt="Mushroom 1"> 
-            <img src="photos/mushrooms-6621454_1280.jpg" alt="Mushrooms 2"> 
-            <img src="photos/tree-stump-1040639_1280.jpg" alt="Tree stump">
-            <img src="photos/boletus-3722395_1280.jpg" alt="Boletus"> 
-            <img src="photos/fungus-1194380_1280.jpg" alt="Fungus"> 
-            <img src="photos/gabriela-xjy0zjs1BHw-unsplash.jpg" alt="Gabriela's photo"> 
-            <img src="photos/krzysztof-niewolny-cX0nEoAS2SI-unsplash.jpg" alt="Krzysztof's photo 1"> 
-            <img src="photos/krzysztof-niewolny-l9W-HZaD88A-unsplash.jpg" alt="Krzysztof's photo 2"> 
-            <img src="photos/krzysztof-niewolny-lpD4zdWlisE-unsplash.jpg" alt="Krzysztof's photo 3"> 
-            <img src="photos/krzysztof-niewolny-_sLrncJsoRc-unsplash.jpg" alt="Krzysztof's photo 4"> 
-            <img src="photos/krzysztof-niewolny-zhbFjC6a2yg-unsplash.jpg" alt="Krzysztof's photo 5"> 
-            <img src="photos/maksym-harbar-RW5bCKy8B84-unsplash.jpg" alt="Maksym's photo"> 
-            <img src="photos/mushroom-5714463_1280.jpg" alt="Mushroom 1"> 
-            <img src="photos/mushrooms-6621454_1280.jpg" alt="Mushrooms 2"> 
-            <img src="photos/tree-stump-1040639_1280.jpg" alt="Tree stump">
+            <img src="photos/boletus-3722395_1280.jpg" alt="Boletus" loading="lazy"> 
+            <img src="photos/fungus-1194380_1280.jpg" alt="Fungus" loading="lazy"> 
+            <img src="photos/gabriela-xjy0zjs1BHw-unsplash.jpg" alt="Gabriela's photo" loading="lazy"> 
+            <img src="photos/krzysztof-niewolny-cX0nEoAS2SI-unsplash.jpg" alt="Krzysztof's photo 1" loading="lazy"> 
+            <img src="photos/krzysztof-niewolny-l9W-HZaD88A-unsplash.jpg" alt="Krzysztof's photo 2" loading="lazy"> 
+            <img src="photos/krzysztof-niewolny-lpD4zdWlisE-unsplash.jpg" alt="Krzysztof's photo 3" loading="lazy"> 
+            <img src="photos/krzysztof-niewolny-_sLrncJsoRc-unsplash.jpg" alt="Krzysztof's photo 4" loading="lazy"> 
+            <img src="photos/krzysztof-niewolny-zhbFjC6a2yg-unsplash.jpg" alt="Krzysztof's photo 5" loading="lazy"> 
+            <img src="photos/maksym-harbar-RW5bCKy8B84-unsplash.jpg" alt="Maksym's photo" loading="lazy"> 
+            <img src="photos/mushroom-5714463_1280.jpg" alt="Mushroom 1" loading="lazy"> 
+            <img src="photos/mushrooms-6621454_1280.jpg" alt="Mushrooms 2" loading="lazy"> 
+            <img src="photos/tree-stump-1040639_1280.jpg" alt="Tree stump" loading="lazy">
+            <img src="photos/boletus-3722395_1280.jpg" alt="Boletus" loading="lazy"> 
+            <img src="photos/fungus-1194380_1280.jpg" alt="Fungus" loading="lazy"> 
+            <img src="photos/gabriela-xjy0zjs1BHw-unsplash.jpg" alt="Gabriela's photo" loading="lazy"> 
+            <img src="photos/krzysztof-niewolny-cX0nEoAS2SI-unsplash.jpg" alt="Krzysztof's photo 1" loading="lazy"> 
+            <img src="photos/krzysztof-niewolny-l9W-HZaD88A-unsplash.jpg" alt="Krzysztof's photo 2" loading="lazy"> 
+            <img src="photos/krzysztof-niewolny-lpD4zdWlisE-unsplash.jpg" alt="Krzysztof's photo 3" loading="lazy"> 
+            <img src="photos/krzysztof-niewolny-_sLrncJsoRc-unsplash.jpg" alt="Krzysztof's photo 4" loading="lazy"> 
+            <img src="photos/krzysztof-niewolny-zhbFjC6a2yg-unsplash.jpg" alt="Krzysztof's photo 5" loading="lazy"> 
+            <img src="photos/maksym-harbar-RW5bCKy8B84-unsplash.jpg" alt="Maksym's photo" loading="lazy"> 
+            <img src="photos/mushroom-5714463_1280.jpg" alt="Mushroom 1" loading="lazy"> 
+            <img src="photos/mushrooms-6621454_1280.jpg" alt="Mushrooms 2" loading="lazy"> 
+            <img src="photos/tree-stump-1040639_1280.jpg" alt="Tree stump" loading="lazy">
+            <img src="photos/boletus-3722395_1280.jpg" alt="Boletus" loading="lazy"> 
+            <img src="photos/fungus-1194380_1280.jpg" alt="Fungus" loading="lazy"> 
+            <img src="photos/gabriela-xjy0zjs1BHw-unsplash.jpg" alt="Gabriela's photo" loading="lazy"> 
+            <img src="photos/krzysztof-niewolny-cX0nEoAS2SI-unsplash.jpg" alt="Krzysztof's photo 1" loading="lazy"> 
+            <img src="photos/krzysztof-niewolny-l9W-HZaD88A-unsplash.jpg" alt="Krzysztof's photo 2" loading="lazy"> 
+            <img src="photos/krzysztof-niewolny-lpD4zdWlisE-unsplash.jpg" alt="Krzysztof's photo 3" loading="lazy"> 
+            <img src="photos/krzysztof-niewolny-_sLrncJsoRc-unsplash.jpg" alt="Krzysztof's photo 4" loading="lazy"> 
+            <img src="photos/krzysztof-niewolny-zhbFjC6a2yg-unsplash.jpg" alt="Krzysztof's photo 5" loading="lazy"> 
+            <img src="photos/maksym-harbar-RW5bCKy8B84-unsplash.jpg" alt="Maksym's photo" loading="lazy"> 
+            <img src="photos/mushroom-5714463_1280.jpg" alt="Mushroom 1" loading="lazy"> 
+            <img src="photos/mushrooms-6621454_1280.jpg" alt="Mushrooms 2" loading="lazy"> 
+            <img src="photos/tree-stump-1040639_1280.jpg" alt="Tree stump" loading="lazy">
+            <img src="photos/boletus-3722395_1280.jpg" alt="Boletus" loading="lazy"> 
+            <img src="photos/fungus-1194380_1280.jpg" alt="Fungus" loading="lazy"> 
+            <img src="photos/gabriela-xjy0zjs1BHw-unsplash.jpg" alt="Gabriela's photo" loading="lazy"> 
+            <img src="photos/krzysztof-niewolny-cX0nEoAS2SI-unsplash.jpg" alt="Krzysztof's photo 1" loading="lazy"> 
+            <img src="photos/krzysztof-niewolny-l9W-HZaD88A-unsplash.jpg" alt="Krzysztof's photo 2" loading="lazy"> 
+            <img src="photos/krzysztof-niewolny-lpD4zdWlisE-unsplash.jpg" alt="Krzysztof's photo 3" loading="lazy"> 
+            <img src="photos/krzysztof-niewolny-_sLrncJsoRc-unsplash.jpg" alt="Krzysztof's photo 4" loading="lazy"> 
+            <img src="photos/krzysztof-niewolny-zhbFjC6a2yg-unsplash.jpg" alt="Krzysztof's photo 5" loading="lazy"> 
+            <img src="photos/maksym-harbar-RW5bCKy8B84-unsplash.jpg" alt="Maksym's photo" loading="lazy"> 
+            <img src="photos/mushroom-5714463_1280.jpg" alt="Mushroom 1" loading="lazy"> 
+            <img src="photos/mushrooms-6621454_1280.jpg" alt="Mushrooms 2" loading="lazy"> 
+            <img src="photos/tree-stump-1040639_1280.jpg" alt="Tree stump" loading="lazy">
+            <img src="photos/boletus-3722395_1280.jpg" alt="Boletus" loading="lazy"> 
+            <img src="photos/fungus-1194380_1280.jpg" alt="Fungus" loading="lazy"> <img src="photos/boletus-3722395_1280.jpg" alt="Boletus" loading="lazy"> 
+            <img src="photos/fungus-1194380_1280.jpg" alt="Fungus" loading="lazy"> 
+            <img src="photos/gabriela-xjy0zjs1BHw-unsplash.jpg" alt="Gabriela's photo" loading="lazy"> 
+            <img src="photos/krzysztof-niewolny-cX0nEoAS2SI-unsplash.jpg" alt="Krzysztof's photo 1" loading="lazy"> 
+            <img src="photos/krzysztof-niewolny-l9W-HZaD88A-unsplash.jpg" alt="Krzysztof's photo 2" loading="lazy"> 
+            <img src="photos/krzysztof-niewolny-lpD4zdWlisE-unsplash.jpg" alt="Krzysztof's photo 3" loading="lazy"> 
+            <img src="photos/krzysztof-niewolny-_sLrncJsoRc-unsplash.jpg" alt="Krzysztof's photo 4" loading="lazy"> 
+            <img src="photos/krzysztof-niewolny-zhbFjC6a2yg-unsplash.jpg" alt="Krzysztof's photo 5" loading="lazy"> 
+            <img src="photos/maksym-harbar-RW5bCKy8B84-unsplash.jpg" alt="Maksym's photo" loading="lazy"> 
+            <img src="photos/mushroom-5714463_1280.jpg" alt="Mushroom 1" loading="lazy"> 
+            <img src="photos/mushrooms-6621454_1280.jpg" alt="Mushrooms 2" loading="lazy"> 
+            <img src="photos/tree-stump-1040639_1280.jpg" alt="Tree stump" loading="lazy">
+            <img src="photos/boletus-3722395_1280.jpg" alt="Boletus" loading="lazy"> 
+            <img src="photos/fungus-1194380_1280.jpg" alt="Fungus" loading="lazy"> 
+            <img src="photos/gabriela-xjy0zjs1BHw-unsplash.jpg" alt="Gabriela's photo" loading="lazy"> 
+            <img src="photos/krzysztof-niewolny-cX0nEoAS2SI-unsplash.jpg" alt="Krzysztof's photo 1" loading="lazy"> 
+            <img src="photos/krzysztof-niewolny-l9W-HZaD88A-unsplash.jpg" alt="Krzysztof's photo 2" loading="lazy"> 
+            <img src="photos/krzysztof-niewolny-lpD4zdWlisE-unsplash.jpg" alt="Krzysztof's photo 3" loading="lazy"> 
+            <img src="photos/krzysztof-niewolny-_sLrncJsoRc-unsplash.jpg" alt="Krzysztof's photo 4" loading="lazy"> 
+            <img src="photos/krzysztof-niewolny-zhbFjC6a2yg-unsplash.jpg" alt="Krzysztof's photo 5" loading="lazy"> 
+            <img src="photos/maksym-harbar-RW5bCKy8B84-unsplash.jpg" alt="Maksym's photo" loading="lazy"> 
+            <img src="photos/mushroom-5714463_1280.jpg" alt="Mushroom 1" loading="lazy"> 
+            <img src="photos/mushrooms-6621454_1280.jpg" alt="Mushrooms 2" loading="lazy"> 
+            <img src="photos/tree-stump-1040639_1280.jpg" alt="Tree stump" loading="lazy">
+            <img src="photos/boletus-3722395_1280.jpg" alt="Boletus" loading="lazy"> 
+            <img src="photos/fungus-1194380_1280.jpg" alt="Fungus" loading="lazy"> <img src="photos/boletus-3722395_1280.jpg" alt="Boletus" loading="lazy"> 
+            <img src="photos/fungus-1194380_1280.jpg" alt="Fungus" loading="lazy"> 
+            <img src="photos/gabriela-xjy0zjs1BHw-unsplash.jpg" alt="Gabriela's photo" loading="lazy"> 
+            <img src="photos/krzysztof-niewolny-cX0nEoAS2SI-unsplash.jpg" alt="Krzysztof's photo 1" loading="lazy"> 
+            <img src="photos/krzysztof-niewolny-l9W-HZaD88A-unsplash.jpg" alt="Krzysztof's photo 2" loading="lazy"> 
+            <img src="photos/krzysztof-niewolny-lpD4zdWlisE-unsplash.jpg" alt="Krzysztof's photo 3" loading="lazy"> 
+            <img src="photos/krzysztof-niewolny-_sLrncJsoRc-unsplash.jpg" alt="Krzysztof's photo 4" loading="lazy"> 
+            <img src="photos/krzysztof-niewolny-zhbFjC6a2yg-unsplash.jpg" alt="Krzysztof's photo 5" loading="lazy"> 
+            <img src="photos/maksym-harbar-RW5bCKy8B84-unsplash.jpg" alt="Maksym's photo" loading="lazy"> 
+            <img src="photos/mushroom-5714463_1280.jpg" alt="Mushroom 1" loading="lazy"> 
+            <img src="photos/mushrooms-6621454_1280.jpg" alt="Mushrooms 2" loading="lazy"> 
+            <img src="photos/tree-stump-1040639_1280.jpg" alt="Tree stump" loading="lazy">
+            <img src="photos/boletus-3722395_1280.jpg" alt="Boletus" loading="lazy"> 
+            <img src="photos/fungus-1194380_1280.jpg" alt="Fungus" loading="lazy"> 
+            <img src="photos/gabriela-xjy0zjs1BHw-unsplash.jpg" alt="Gabriela's photo" loading="lazy"> 
+            <img src="photos/krzysztof-niewolny-cX0nEoAS2SI-unsplash.jpg" alt="Krzysztof's photo 1" loading="lazy"> 
+            <img src="photos/krzysztof-niewolny-l9W-HZaD88A-unsplash.jpg" alt="Krzysztof's photo 2" loading="lazy"> 
+            <img src="photos/krzysztof-niewolny-lpD4zdWlisE-unsplash.jpg" alt="Krzysztof's photo 3" loading="lazy"> 
+            <img src="photos/krzysztof-niewolny-_sLrncJsoRc-unsplash.jpg" alt="Krzysztof's photo 4" loading="lazy"> 
+            <img src="photos/krzysztof-niewolny-zhbFjC6a2yg-unsplash.jpg" alt="Krzysztof's photo 5" loading="lazy"> 
+            <img src="photos/maksym-harbar-RW5bCKy8B84-unsplash.jpg" alt="Maksym's photo" loading="lazy"> 
+            <img src="photos/mushroom-5714463_1280.jpg" alt="Mushroom 1" loading="lazy"> 
+            <img src="photos/mushrooms-6621454_1280.jpg" alt="Mushrooms 2" loading="lazy"> 
+            <img src="photos/tree-stump-1040639_1280.jpg" alt="Tree stump" loading="lazy">
+            <img src="photos/boletus-3722395_1280.jpg" alt="Boletus" loading="lazy"> 
+            <img src="photos/fungus-1194380_1280.jpg" alt="Fungus" loading="lazy"> 
             </div>
         </section>
     </div>
