Poprawiono style, dodano kontent na podstronie posty

--- a/zdjecia.html
+++ b/zdjecia.html
@@ -47,8 +47,8 @@
         </ul>
     </nav>
     <div id="container">
-        <section>
-            <h1>Oto zdjęcia naszych użytkowników</h1>
+        <section class="galery-section">
+            <h1 class="dynapuff-font">Oto zdjęcia naszych użytkowników</h1>
             
             <div id="gallery">
             <!-- zdjęcia będą się powtarzać ponieważ nie ma sensu żebym pobierał więcej niż jest teraz bo nie one są najważniejsze w tym projekcie -->
