poprawiono oczywiście style, sekcja posty już jest responsywna

--- a/przepisy.html
+++ b/przepisy.html
@@ -48,12 +48,12 @@
     </nav>
     <div id="container">
         <section class="normal-section">
-            <h1 class="dynapuff-font">Przepisy na dania z grzybami</h1>
+            <h1>Przepisy na dania z grzybami</h1>
             
             <article class="square">
                 <h2 >Kremowa zupa grzybowa z borowikami</h2>
                 <div class="center-img">
-                    <img src="photos/krzysztof-niewolny-_sLrncJsoRc-unsplash.jpg" alt="jedzenie">
+                    <img src="photos/zupa grzybowa.jpg" alt="jedzenie">
                 </div>
                 <p>Aromatyczna zupa, która przeniesie Cię prosto do leśnej polany. Borowiki nadają jej głęboki, intensywny smak, a dodatek śmietanki sprawia, że jest niezwykle kremowa.</p>
                 <p>Grzyby podsmażamy na maśle z cebulą, zalewamy bulionem warzywnym i gotujemy do miękkości. Blendujemy, dodajemy śmietankę, a na koniec dekorujemy świeżą pietruszką.</p>
@@ -63,7 +63,7 @@
             <article class="square">
                 <h2>Tagliatelle z kurkami w sosie śmietanowym</h2>
                 <div class="center-img">
-                    <img src="photos/krzysztof-niewolny-zhbFjC6a2yg-unsplash.jpg" alt="jedzenie">
+                    <img src="photos/pieczarki.jpg" alt="jedzenie">
                 </div>
                 <p>Delikatny makaron połączony z kurkami podsmażonymi na maśle i zanurzonymi w aksamitnym sosie śmietanowym. Idealne danie na szybki obiad.</p>
                 <p>Kurki dusimy z cebulą i czosnkiem, zalewamy śmietanką, doprawiamy solą, pieprzem i gałką muszkatołową. Sos mieszamy z ugotowanym al dente makaronem i podajemy z tartym parmezanem.</p>
@@ -73,7 +73,7 @@
             <article class="square">
                 <h2>Risotto z podgrzybkami i parmezanem</h2>
                 <div class="center-img">
-                    <img src="photos/maksym-harbar-RW5bCKy8B84-unsplash.jpg" alt="jedzenie">
+                    <img src="photos/pizza grzybbowa.jpg" alt="jedzenie">
                 </div>
                 <p>Tradycyjne włoskie danie w grzybowej odsłonie. Kremowe risotto z dodatkiem świeżych podgrzybków to elegancka propozycja na kolację.</p>
                 <p>Na oliwie podsmażamy szalotkę, dodajemy ryż arborio i stopniowo dolewamy bulion, mieszając. Grzyby podsmażamy osobno i dodajemy pod koniec gotowania wraz z masłem i parmezanem.</p>
