--- a/strona-w-budowie.html
+++ b/strona-w-budowie.html
@@ -6,6 +6,6 @@
     <title>nie ma takiej strony</title>
 </head>
 <body>
-    Ta strona nie istnieje, najwidoczniej autor uznał że nie jest potrzebna
+    Strona w trakcie budowy.....
 </body>
 </html>
