--- a/zdjecia.html
+++ b/zdjecia.html
@@ -48,7 +48,7 @@
     </nav>
     <div id="container">
         <section class="galery-section">
-            <h1 class="dynapuff-font">Oto zdjęcia naszych użytkowników</h1>
+            <h1>Oto zdjęcia naszych użytkowników</h1>
             
             <div id="gallery">
             <!-- zdjęcia będą się powtarzać ponieważ nie ma sensu żebym pobierał więcej niż jest teraz bo nie one są najważniejsze w tym projekcie -->
