poprawka, teraz wszystko działa, zostało poprawić style

--- a/wybitny-czlowiek.html
+++ b/wybitny-czlowiek.html
@@ -48,7 +48,7 @@
     </nav>
     <div id="container">
         <section class="normal-section ">
-            <h1 class="dynapuff-font">Konrad Szyszlak - wybitny człowiek</h1>
+            <h1>Konrad Szyszlak - wybitny człowiek</h1>
             <article>
                 <div class="center-img">
                     <img src="photos/wybitny_czlowiek.jpg" alt="Konrad Szyszlak">
