--- a/kontakt.html
+++ b/kontakt.html
@@ -47,7 +47,29 @@
         </ul>
     </nav>
     <div id="container">
-        <section>
+        <section class="normal-section">
+            <h2>Formularz Kontaktowy</h2>
+            <form>
+                <div class="form-field">
+                    <label for="name">Imię i nazwisko:</label>
+                    <input type="text" id="name" name="name" required>
+                </div>
+                <div class="form-field">
+                    <label for="email">Adres e-mail:</label>
+                    <input type="email" id="email" name="email" required>
+                </div>
+                <div class="form-field">
+                    <label for="subject">Temat:</label>
+                    <input type="text" id="subject" name="subject" required>
+                </div>
+                <div class="form-field">
+                    <label for="message">Wiadomość:</label>
+                    <textarea id="message" name="message" rows="4" required></textarea>
+                </div>
+                <div class="form-field">
+                    <button type="submit">Wyślij wiadomość</button>
+                </div>
+            </form>
         </section>
     </div>
     <footer>
