kolejna poprawa styli, wyglądu i responsywności

--- a/wybitny-czlowiek.html
+++ b/wybitny-czlowiek.html
@@ -47,18 +47,17 @@
         </ul>
     </nav>
     <div id="container">
-        <section class="normal-section ">
-            <h1>Konrad Szyszlak - wybitny człowiek</h1>
-            <article>
+        <div class="normal-section ">
+            <article class="square">
                 <div class="center-img">
                     <img src="photos/wybitny_czlowiek.jpg" alt="Konrad Szyszlak">
                 </div>
-            <h2>W skrócie...</h2>
+                <h2>Konrad Szyszlak - Człowiek wybitny</h2>             
             <p>Autor, którego masz przed sobą, to postać wyjątkowa – człowiek o intelekcie, który zdaje się wyprzedzać swoją epokę, i urodzie, która dorównuje młodemu Krzysztofowi Krawczykowi. Gdyby Tony Stark miał polskie korzenie, miłość do śpiewania przy ognisku i talent do pieczenia najlepszych pierogów w okolicy, to właśnie on byłby tym człowiekiem.</p>
 
             <p>Urodzony z pasją do innowacji, od najmłodszych lat przejawiał niezwykły talent do łączenia rzeczy pozornie niepasujących. W podstawówce zbudował swój pierwszy komputer z klocków LEGO i starej drukarki igłowej.</p>
 
-            <p>W liceum opracował system optymalizacji domowego ogrzewania, dzięki czemu sąsiedzi przez całą zimę chodzili w T-shirtach. Ale to nie wszystko – równolegle rozwijał swoje zdolności artystyczne, zdobywając lokalne nagrody za interpretacje klasyków polskiej piosenki, od Maryli Rodowicz po Zbigniewa Wodeckiego.</p>
+            <p>W technikum opracował system optymalizacji domowego ogrzewania, dzięki czemu sąsiedzi przez całą zimę chodzili w T-shirtach. Ale to nie wszystko – równolegle rozwijał swoje zdolności artystyczne, zdobywając lokalne nagrody za interpretacje klasyków polskiej piosenki, od Maryli Rodowicz po Zbigniewa Wodeckiego.</p>
 
             <p>Jego wielką pasją jest muzyka. Ma głos, który potrafi wzruszyć nawet najbardziej zatwardziałe serca. Gdy śpiewa, ludzie zatrzymują się na ulicy, by posłuchać – w końcu nie codziennie można usłyszeć kogoś, kto łączy energię Bruce’a Springsteena z romantyzmem Andrzeja Zauchy. Jego ulubioną piosenką jest Parostatek, a gdy tylko znajdzie chwilę wolnego czasu, komponuje własne utwory, które łączą tradycyjne polskie brzmienia z nowoczesnym elektronicznym twistem.</p>
 
@@ -71,7 +70,7 @@
             <p>W skrócie: człowiek, który łączy geniusz, styl, empatię i artystyczną duszę. Gdyby życie było grą, on miałby wszystkie statystyki na maksimum – a nawet kilka punktów ponad to.</p>
 
             </article>
-        </section>
+        </div>
     </div>
     <footer>
         Stronę wykonał <em>Konrad Szyszlak 131524</em> w ramach projektu
