--- a/mapa.html
+++ b/mapa.html
@@ -47,7 +47,7 @@
         </ul>
     </nav>
     <div id="container">
-        <!--Kod wygenerowany przy pomocy strony https://embed-googlemap.com/-->
+        <!--Kod wygenerowany przy pomocy strony https://embed-googlemap.com/ w validatorze pokazuje błędy-->
         <div class="mapouter"><div class="gmap_canvas"><iframe class="gmap_iframe" width="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=1000&amp;height=800&amp;hl=en&amp;q=bieszczady&amp;t=&amp;z=9&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a href="https://linktr.ee/sparklesyt">sparklesyt</a></div><style>.mapouter{position:relative;text-align:right;width:100%;height:700px;}.gmap_canvas {overflow:hidden;background:none!important;width:100%;height:700px;}.gmap_iframe {height:700px!important;}</style></div>
     </div>
     <footer>
