--- a/przepisy.html
+++ b/przepisy.html
@@ -53,7 +53,7 @@
             <article class="square">
                 <h2 >Kremowa zupa grzybowa z borowikami</h2>
                 <div class="center-img">
-                    <img src="photos/zupa grzybowa.jpg" alt="jedzenie">
+                    <img src="photos/zupa_grzybowa.jpg" alt="jedzenie">
                 </div>
                 <p>Aromatyczna zupa, która przeniesie Cię prosto do leśnej polany. Borowiki nadają jej głęboki, intensywny smak, a dodatek śmietanki sprawia, że jest niezwykle kremowa.</p>
                 <p>Grzyby podsmażamy na maśle z cebulą, zalewamy bulionem warzywnym i gotujemy do miękkości. Blendujemy, dodajemy śmietankę, a na koniec dekorujemy świeżą pietruszką.</p>
@@ -73,7 +73,7 @@
             <article class="square">
                 <h2>Risotto z podgrzybkami i parmezanem</h2>
                 <div class="center-img">
-                    <img src="photos/pizza grzybbowa.jpg" alt="jedzenie">
+                    <img src="photos/pizza_grzybbowa.jpg" alt="jedzenie">
                 </div>
                 <p>Tradycyjne włoskie danie w grzybowej odsłonie. Kremowe risotto z dodatkiem świeżych podgrzybków to elegancka propozycja na kolację.</p>
                 <p>Na oliwie podsmażamy szalotkę, dodajemy ryż arborio i stopniowo dolewamy bulion, mieszając. Grzyby podsmażamy osobno i dodajemy pod koniec gotowania wraz z masłem i parmezanem.</p>
@@ -83,7 +83,7 @@
             <article class="square">
                 <h2>Placki ziemniaczane z sosem grzybowym</h2>
                 <div class="center-img">
-                    <img src="photos/gabriela-xjy0zjs1BHw-unsplash.jpg" alt="jedzenie">
+                    <img src="photos/slovakian-cuisine-6822945_1280.jpg" alt="jedzenie">
                 </div>
                 <p>Chrupiące placki ziemniaczane podane z aromatycznym, kremowym sosem grzybowym. Połączenie klasyki z leśnym smakiem grzybów.</p>
                 <p>Placki przygotowujemy z tartej ziemniaczanej masy. Grzyby (np. pieczarki lub prawdziwki) dusimy z cebulą i śmietanką, doprawiamy solą, pieprzem i koperkiem, a potem podajemy jako dodatek.</p>
@@ -93,7 +93,7 @@
             <article class="square">
                 <h2>Zapiekanka ziemniaczana z grzybami leśnymi</h2>
                 <div class="center-img">
-                    <img src="photos/mushrooms-6621454_1280.jpg" alt="jedzenie">
+                    <img src="photos/casserole-227998_1280.jpg" alt="jedzenie">
                 </div>
                 <p>Sycąca i aromatyczna zapiekanka z ziemniakami, grzybami leśnymi i kremowym serem. Idealna na rodzinny obiad lub kolację.</p>
                 <p>Grzyby podsmażamy na maśle, układamy warstwami z plasterkami ziemniaków, polewamy śmietaną z przyprawami i posypujemy serem. Zapiekamy do złocistej skórki.</p>
