poprawiono menu rozwijane i inne style

--- a/wybitny-czlowiek.html
+++ b/wybitny-czlowiek.html
@@ -22,17 +22,18 @@
 <body>
     <header>
         <div id="logo"><img src="photos/logo.png" alt="logo strony"></div>
-        <div id="hamburger-menu">
-            <ul>
-                <li><a href="index.html">atlas</a></li>
+        <nav id="hamburger-nav">
+            <input type="checkbox" id="burger-icon">
+            <ul id="hamburger-menu">
+                <li><a href="index.html" class="active">atlas</a></li>
                 <li><a href="zdjecia.html">zdjęcia</a></li>
                 <li><a href="przepisy.html">przepisy</a></li>
                 <li><a href="posty.html">posty</a></li>
                 <li><a href="mapa.html">mapa</a></li>
                 <li><a href="kontakt.html">kontakt</a></li>
-                <li><a href="wybitny-czlowiek.html" class="active">o autorze</a></li>
+                <li><a href="wybitny-czlowiek.html">o autorze</a></li>
             </ul>
-        </div>
+        </nav>
         <div id="logo-napis" class="dynapuff-font"><a href="index.html">LEŚNY KOSZYCZEK</a></div>
     </header>
     <nav id="navbar">
