--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 <body>
     <header>
         <div id="logo"><img src="photos/logo.png" alt="logo strony"></div>
-        <nav id="hamburger-menu">
-            <div id="burger-icon"></div>
-            <ul>
+        <nav id="hamburger-nav">
+            <input type="checkbox" id="burger-icon">
+            <ul id="hamburger-menu">
                 <li><a href="index.html" class="active">atlas</a></li>
                 <li><a href="zdjecia.html">zdjęcia</a></li>
                 <li><a href="przepisy.html">przepisy</a></li>
